Import of AHERNIT/String-BooleanSimple-0.022 from CPAN.
gitpan-cpan-distribution: String-BooleanSimple
gitpan-cpan-version:      0.022
gitpan-cpan-path:         AHERNIT/String-BooleanSimple-0.022.tar.gz
gitpan-cpan-author:       AHERNIT
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -4,9 +4,20 @@ license = LGPL_3_0
 copyright_holder = Andreas Hernitscheck
 copyright_year   = 2014
 
-version = 0.021
 
 [PkgVersion]
+[NextRelease]
+
+[Git::NextVersion]
+first_version = 0.022       
+version_by_branch = 0       
+version_regexp  = ^v(.+)$   
+
+[Git::Check]
+[Git::Commit]
+[Git::Tag]
+[Git::Push]
+
 
 [GatherDir]
 [MetaYAML]
